# auth2

./: README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/dev/typester/auth2/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/typester/auth2/: MainActivity.kt  MainGraph.kt  Shared.kt
android/app/src/main/java/dev/typester/auth2/ui/screens/: AddTokenScreen.kt  AddTokenViewModel.kt  BiometricScreen.kt  BiometricViewModel.kt  DataMigrationScreen.kt  DataMigrationViewModel.kt  EncryptKeyScreen.kt  EncryptKeyViewModel.kt  ListTokenScreen.kt  ListTokenViewModel.kt  TokenDetailScreen.kt  TokenDetailViewModel.kt
android/app/src/main/java/dev/typester/auth2/ui/theme/: Color.kt  (+2 more)
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/dev/typester/auth2/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
core/: .gitignore  Cargo.toml  build-android-lib.sh
core/migrations/: 20241110183823_CreateTable.down.sql  20241110183823_CreateTable.up.sql
core/src/: bridge.rs  config.rs  enc.rs  error.rs  lib.rs
core/src/db/: migrate.rs  mod.rs  tokens.rs
ios/: .gitignore
ios/Auth2/: Auth2App.swift  Bridging-Header.h  ContentView.swift
ios/Auth2.xcodeproj/: project.pbxproj
ios/Auth2/screen/: AddTokenScreen.swift  CreateEncryptionKeyScreen.swift  DataMigrationScreen.swift  TokenDetailScreen.swift  TokenListScreen.swift
ios/Auth2Tests/: Auth2Tests.swift
ios/Auth2UITests/: Auth2UITests.swift  Auth2UITestsLaunchTests.swift
