[package]
name = "auth2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
name = "auth2"

[features]
default = []
uniffi-cli = ["uniffi/cli"]

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.93"
async-trait = "0.1.83"
base64 = "0.22.1"
frostflake = { version = "0.4.1", features = ["tokio"] }
pbkdf2 = "0.12.2"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.2"
tokio = { version = "1.41.1", features = ["fs", "net", "rt-multi-thread", "time", "sync", "tracing"] }
totp-rs = { version = "5.6.0", features = ["otpauth"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uniffi = "0.28.2"

[build-dependencies]
uniffi = { version = "0.28.2", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "bin/uniffi-bindgen.rs"
required-features = ["uniffi-cli"]

[dev-dependencies]
tempfile = "3.14.0"
tokio = { version = "1.41.1", features = ["full", "test-util"] }
